Fixed some layout issues that appeared during printing.

--- a/media/css/bjcpentry-print.css
+++ b/media/css/bjcpentry-print.css
@@ -9,3 +9,39 @@
 .print_button {
 	display: none;
 }
+
+.hotcold_marker_1 {
+    position: relative;
+    left: 40%;
+    width: 25px;
+    top: -25px;
+}
+
+.hotcold_marker_2 {
+    position: relative;
+    left: 20%;
+    width: 25px;
+    top: -25px;
+}
+
+.hotcold_marker_3 {
+    position: relative;
+    left: 0%;
+    width: 25px;
+    top: -25px;
+}
+
+.hotcold_marker_4 {
+    position: relative;
+    left: -20%;
+    width: 25px;
+    top: -25px;
+}
+
+.hotcold_marker_5 {
+    position: relative;
+    left: -50%;
+    width: 25px;
+    top: -25px;
+}
+
